[tool.poetry]
name = "t_yt_faraday"
version = "0.1.0"
description = ""
authors = ["Nate Allen <nallen@directionsresearch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
